--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -96,6 +96,7 @@
             border: none;
             border-radius: 8px;
             -webkit-appearance: button;
+            background-color: #fff;
             &:hover {
                 cursor: pointer;
                 background-color: $brand-secondary-light-peach;
